apps/mih-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mih-api-service
spec:
  selector:
    app: mih-api
  ports:
    - port: 80
      targetPort: 8000
